JEDIT 4.2 VERSION HISTORY

{{{ Version 4.2pre1

Thanks to Bill McMilleon, Kris Kopicki and Ryan Grove for contributing
to this release.

{{{ Editing

- Quick copy now more consistent with usual mouse behavior:

  - Control-middle-clicking on a bracket will insert the contents of the
    bracketed block at the caret position.

  - Shift-middle-clicking at a point will insert text from the caret to
    the point at the caret position. Can be used to duplicate a line,
    for example.

- Register contents are now saved across editing sessions in
  ~/.jedit/registers.xml.

- Complete Word popup now has keyboard shortcuts (1 - 0) for inserting
  the first 10 elements in the list.

- Changed vertical paste behavior. Now if the rectangle we are inserting
  into has more lines than the pasted text, the pasted text cycles
  through the rectangle. Previously, it would be inserted at the top
  with the remaining lines blank. The new behavior is very convinient;
  for example, you can select a zero-width rectangle and paste "final"
  to mark a set of variables in Java source as being final.

- Entering a prefix while a JTextComponent has focus will move focus to
  the text area. This allows shortcuts like C+e n n to be used from the
  search bar and such without having to prefix them with C+e C+e first.

- Previously, a Control-click on a bracket scope would select the
  bracketed expression. Now, a Shift-click selects the expression and a
  Control-click narrows to the expression.

- Previously setting the wrap margin to zero with soft wrap on would
  wrap to the width of the text area. This is no longer supported.

}}}
{{{ Syntax Highlighting

- A new default color scheme.

- Added a new more token types: COMMENT3, COMMENT4, LITERAL3, LITERAL4,
  KEYWORD4.

- AT_LINE_START, AT_WORD_START and AT_WHITESPACE_END attributes can now
  be set independently for BEGIN and END tags of a SPAN.

- The default background color of a token is now the background color of